# hippopytamus

./: README.md
.github/workflows/: action.yaml
server/: 404.html  Makefile  index.html  mypy.ini  pyproject.toml
server/hippopytamus/: context.py  main.py  server.py
server/hippopytamus/core/: annotation.py  app.py  class_parser.py  container.py  exception.py  extractor.py  filter.py  lazy_import_utils.py  method_parser.py  router.py
server/hippopytamus/data/: data_processor.py  repo_creator.py  repo_parser.py  repo_predicate.py  repository.py
server/hippopytamus/example/: controller.py  deps.py  hello.py  main.py
server/hippopytamus/example/example1/: deps.py  hello.py  main.py
server/hippopytamus/example/example2/: components.py  main.py
server/hippopytamus/example/example3/: components.py  main.py
server/hippopytamus/example/example4/: components.py  main.py
server/hippopytamus/example/example5/: components.py  main.py
server/hippopytamus/logger/: logger.py
server/hippopytamus/protocol/: echo.py  http.py  interface.py  ssh.py
server/hippopytamus/server/: __init__.py  main.py  nonblocking.py  threaded.py
server/tests/: test_controller.py  test_cycle.py  test_deps.py  test_echo.py  test_echo_server.py  test_exc.py  test_hello.py  test_logger.py  test_repo_full.py  test_repo_methods_parsing.py  utils.py
