[project]
name = "hippopytamus"
version = "0.1.0"
description = ""
authors = [{ name = "xpakx", email = "55586470+xpakx@users.noreply.github.com" }]
requires-python = "~=3.12"
readme = "README.md"

[dependency-groups]
test = ["pytest>=8.3.3,<9"]
dev = ["mypy>=1.13.0,<2"]

[tool.uv]
default-groups = [
    "test",
    "dev",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
